[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matchbox2py"
version = "0.1.0"
description = "Python library for controlling Integrated Optics MatchBox 2 laser modules via USB serial communication"
authors = [
    { name="Edvinas"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyserial>=3.5"
]

[project.urls]
Homepage = "https://integratedoptics.com/"
Repository = "https://github.com/yourusername/matchbox2py"
