[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matchbox2"
version = "0.1.1"
description = "Python library for controlling MatchBox 2 laser modules manufactured by Integrated Optics Ltd. via USB serial communication."
authors = [
    { name = "Integrated Optics, UAB" }
]
readme = "README.md"

dependencies = [
    "pyserial>=3.5"
]

[project.urls]
Homepage = "https://integratedoptics.com/"
Repository = "https://github.com/Integrated-optics/matchbox2py"

[tool.setuptools.package-dir]
matchbox2 = "matchbox2"

[tool.setuptools.packages.find]
where = ["."]
