[metadata]
name = matchbox2py
version = 0.1.6
description = Official Python library for controlling Integrated Optics MatchBox2 laser modules via USB serial interface.
long_description = file: README.md
long_description_content_type = text/markdown
author = Integrated Optics, UAB
license = MIT
url = https://github.com/Integrated-optics/matchbox2py

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyserial>=3.5
